correct margin and spacing of teacher pofile pictures and blurb.

--- a/less/bbwdstyle.less
+++ b/less/bbwdstyle.less
@@ -567,8 +567,14 @@ select {
 }
 
 //Add Padding to Thumbnails on Classes Page
-.teachers {
-  padding: 71px;
+#teacherMain { //thumbmail ul containing all teachers
+  margin-left: 10px;
+}
+.teachers {  //li which contains the thumbmail div
+  padding:13px;
+}
+.teacher {  //thumbnail div for image
+  padding: 16px;
 }
 .schedule {
   padding: 22px 70px;
